2009-05-05  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/ChartPanel.java
    (doCopy): Account for insets, and pass scaling parameters to
    ChartTransferable,
    * source/org/jfree/chart/ChartTransferable.java
    (minDrawWidth): New field,
    (minDrawHeight): Likewise,
    (maxDrawWidth): Likewise,
    (maxDrawHeight): Likewise,
    (ChartTransferable): New constructor,
    (getTransferData): Delegate to new utility method,
    (createBufferedImage): New method that can apply scaling.

2009-04-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/SamplingXYLineRenderer.java
    (State.startSeriesPass): Reset interval path.

2009-04-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/AbstractRenderer.java
    (legendShape): Renamed legendShapeList,
    (treatLegendShapeAsLine): New field,
    (AbstractRenderer): Initialise new field,
    (getTreatLegendShapeAsLine): New method,
    (setTreatLegendShapeAsLine): Likewise,
    (equals): Check treatLegendShapeAsLine field,
    * source/org/jfree/chart/renderer/xy/AbstractXYItemRenderer.java
    (getLegendItem): Use different legend item if 'treatLegendShapeAsLine' flag
    is set,
    * source/org/jfree/chart/LegendItem.java
    (setDescription): New method,
    (setToolTipText): Likewise,
    (setURLText): Likewise,
    (setShapeVisible): Likewise,
    (setShape): Likewise,
    (setOutlineStroke): Likewise,
    (setLineVisible): Likewise,
    (setLine): Likewise,
    * source/org/jfree/chart/renderer/xy/SamplingXYLineRenderer.java
    (SamplingXYLineRenderer): Configure renderer for lines in legend item,
    (getLegendLine): Deprecated,
    (setLegendLine): Likewise.

2009-04-27  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/util/LogFormat.java
    (format(long, StringBuffer, FieldPosition)): Use powerLabel attribute.
